# GraphIDS

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  rank_ips.py  requirements.txt
configs/: NF-CSE-CIC-IDS2018-v2.yaml  NF-CSE-CIC-IDS2018-v3.yaml  NF-UNSW-NB15-v2.yaml  NF-UNSW-NB15-v3.yaml
inference_outputs/rankings_68wilb9k/: rank_19700101T000000Z_19700101T010000Z.csv  rank_GLOBAL.csv
inference_outputs/rankings_f29xo0sk/: rank_19700101T000000Z_19700101T010000Z.csv  rank_GLOBAL.csv
inference_outputs/rankings_x2ldz6zk/: rank_19700101T000000Z_19700101T010000Z.csv  rank_GLOBAL.csv
models/: GraphIDS.py  graphids.py
utils/: dataloaders.py  parser.py  trainers.py
